<resources>
    <string name="app_name">Gesta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_usuario">Correo/usuario</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrar_sesion">Cerrar Sesión</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_hoy">Hoy</string>
    <string name="menu_mannana">Mañana</string>
    <string name="menu_semana">Semana</string>
    <string name="menu_mes">Mes</string>
    <string name="menu_pendiente">Pendientes</string>
    <string name="menu_atrazada">Atrazadas</string>
    <string name="menu_no_asignada">No Asignada</string>
    <string name="menu_servicios">Servicios</string>
</resources>
