<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"

            android:title="@string/menu_inicio" />
        <item android:title="Tareas">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_hoy"
                        android:icon="@android:drawable/ic_menu_edit"
                        android:title="@string/menu_hoy" />
                    <item
                        android:id="@+id/nav_mannana"
                        android:icon="@android:drawable/ic_menu_edit"
                        android:title="@string/menu_mannana" />

                    <item
                        android:id="@+id/nav_semana"
                        android:icon="@android:drawable/ic_menu_edit"
                        android:title="@string/menu_semana" />
                    <item
                        android:id="@+id/nav_mes"
                        android:icon="@android:drawable/ic_menu_edit"
                        android:title="@string/menu_mes" />
                    <item
                        android:id="@+id/nav_pendiente"
                        android:icon="@android:drawable/ic_menu_edit"
                        android:title="@string/menu_pendiente" />
                    <item
                        android:id="@+id/nav_atrazada"
                        android:icon="@android:drawable/ic_menu_edit"
                        android:title="@string/menu_atrazada" />
                    <item
                        android:id="@+id/nav_no_asignada"
                        android:icon="@android:drawable/ic_menu_edit"
                        android:title="@string/menu_no_asignada" />
                    <item
                        android:id="@+id/nav_servicios"
                        android:icon="@android:drawable/ic_menu_manage"
                        android:title="@string/menu_servicios" />
                </group>
            </menu>
        </item>
    </group>
</menu>
