<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.gesta.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_hoy"
        android:name="com.example.gesta.ui.hoy.HoyFragment"
        android:label="@string/menu_hoy"
        tools:layout="@layout/fragment_hoy" />

    <fragment
        android:id="@+id/nav_mannana"
        android:name="com.example.gesta.ui.mannana.ManannaFragment"
        android:label="@string/menu_mannana"
        tools:layout="@layout/fragment_mannana" />

    <fragment
        android:id="@+id/nav_semana"
        android:name="com.example.gesta.ui.semana.SemanaFragment"
        android:label="@string/menu_semana"
        tools:layout="@layout/fragment_semana" />

    <fragment
        android:id="@+id/nav_mes"
        android:name="com.example.gesta.ui.mes.MesFragment"
        android:label="@string/menu_mes"
        tools:layout="@layout/fragment_mes" />

    <fragment
        android:id="@+id/nav_pendiente"
        android:name="com.example.gesta.ui.pendientes.PendienteFragment"
        android:label="@string/menu_pendiente"
        tools:layout="@layout/fragment_pendiente" />

    <fragment
        android:id="@+id/nav_atrazada"
        android:name="com.example.gesta.ui.atrazadas.AtrazadaFragment"
        android:label="@string/menu_atrazada"
        tools:layout="@layout/fragment_atrazada" />

    <fragment
        android:id="@+id/nav_no_asignada"
        android:name="com.example.gesta.ui.no_asignada.NoAsignadaFragment"
        android:label="@string/menu_no_asignada"
        tools:layout="@layout/fragment_no_asignada" />

    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.example.gesta.ui.servicios.ServiciosFragment"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_servicios" />
</navigation>